# robot_ws

install/: local_setup.sh  setup.sh
install/camera_detection/lib/camera_detection/: panorama_robusto
install/camera_detection/share/camera_detection/: local_setup.sh  package.ps1  package.sh
install/camera_detection_interfaces/share/camera_detection_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/camera_detection_interfaces/share/camera_detection_interfaces/cmake/: ament_cmake_export_targets-extras.cmake  camera_detection_interfaces__rosidl_typesupport_cExport-noconfig.cmake  camera_detection_interfaces__rosidl_typesupport_cExport.cmake  camera_detection_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  camera_detection_interfaces__rosidl_typesupport_introspection_cppExport.cmake  export_camera_detection_interfaces__rosidl_generator_cExport-noconfig.cmake  (+6 more)
install/robot_bridge/lib/robot_bridge/: uart_bridge
install/robot_bridge/share/robot_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/camera_detection/: CMakeLists.txt
src/camera_detection/camera_detection/: detection_service.py
src/camera_detection/scripts/: detection_service.py  mjpeg_camera.py  simple_camera.py  teleop_keyboard.py
src/camera_detection/src/: panorama_robusto.cpp
src/camera_detection_interfaces/: CMakeLists.txt  package.xml
src/camera_detection_interfaces/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/camera_detection_interfaces/log/: latest_build
src/robot_bridge/: setup.py
src/robot_bridge/robot_bridge/: uart_bridge.py
(+16 files in other folders)
